# smart-city

./: .gitignore  README.md  app.py  mapa_ruta.html  pyproject.toml  rag_demo.py  requirements.txt  setup.py
.streamlit/: secrets.toml
data/: bike_stations.csv  distance_matrix.csv  duration_matrix.csv  duration_w_matrix.csv
data/documents/: FAQ-valenbici.csv
model/: best_params.json  final_model.pkl  retrained_model.pkl
src/: ChatBot.py  app.py  best_lgbm_optuna.py  config.py  extract_data_from_ceferra_repo.py  ors_cycling.py  prepare_data4ml.py  rag_chat_aux.py  routes.ipynb  routes.py  style.css  train_test_lgbm.py  utils.py  vectorstore_builder.py  visuals.ipynb  weather_scraper.py
vectordb/: index.faiss  index.pkl
