[project]
name = "smart-city"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "dotenv>=0.9.9",
    "faiss-cpu>=1.11.0",
    "folium>=0.20.0",
    "ipykernel>=6.29.5",
    "langchain>=0.3.25",
    "langchain-community>=0.3.25",
    "langchain-core>=0.3.65",
    "langchain-huggingface>=0.3.0",
    "langchain-ollama>=0.3.3",
    "lightgbm>=4.6.0",
    "matplotlib>=3.10.3",
    "openrouteservice>=2.3.3",
    "optuna>=4.3.0",
    "pandas>=2.3.0",
    "polars>=1.30.0",
    "pypdf2>=3.0.1",
    "requests>=2.32.4",
    "scikit-learn>=1.7.0",
    "selenium>=4.33.0",
    "sentence-transformers>=4.1.0",
    "streamlit>=1.45.1",
    "streamlit-folium>=0.25.0",
    "streamlit-on-hover-tabs>=1.0.1",
    "torch>=2.7.1",
]
